added port check, loading viewer configuration

--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
 		<script src="js/dependencies/jquery/jquery.js"></script>
         <script src="js/dependencies/jquery.cookie/jquery.cookie.js"></script>
         <script src="js/login.js"></script>
+        <link href="css/bootstrap.css" rel="stylesheet">
 	</head>
 	
 	<body>
