--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 	<link href="css/bootstrap-responsive.css" rel="stylesheet">
     <!--[if IE 9]><link href="css/ie9.css" rel="stylesheet" type="text/css" /><![endif]-->
     <script src="https://www.appsngen.com/application-viewer/gadgets/js/appstore.api.js?c=1"></script>
-    <script src="http://localhost:8889/content/js/appstore.api.container.js" type="text/javascript"></script>
 	<script src="js/dependencies/jquery/jquery.js"></script>
+    <script src="js/dependencies/jquery-color/jquery.color.js"></script>
+    <script src="js/dependencies/jquery-ui/jquery-ui.js"></script>
+    <script src="js/dependencies/jquery.cookie/jquery.cookie.js"></script>
+    <script src="js/dependencies/bootstrap-css/bootstrap.min.js"></script>
+    <script src="js/dependencies/underscore/underscore-min.js"></script>
+    <script src="http://requirejs.org/docs/release/2.1.14/minified/require.js"></script>
+    <script src="js/devbox.container.js"></script>
 	<script>
 		$(document).ready(function() {
 			$(".top-tabs li").click(function () {
@@ -117,14 +123,6 @@
             <p>© EPAM <script>document.write(new Date().getFullYear())</script></p>
         </footer>
     </div>
-
-    <script src="js/dependencies/jquery/jquery.js"></script>
-    <script src="js/dependencies/jquery-color/jquery.color.js"></script>
-    <script src="js/dependencies/jquery-ui/jquery-ui.js"></script>
-    <script src="js/dependencies/jquery.cookie/jquery.cookie.js"></script>
-    <script src="js/dependencies/bootstrap-css/bootstrap.min.js"></script>
-    <script src="js/devbox.container.js"></script>
-    <script src="js/dependencies/underscore/underscore-min.js"></script>
 
     <!-- underscore templates-->
     <script type="text/template" id="appTmpl">
