added clear cache before start

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="well gen-settings panel">
 					<div>
                         <div style="position: relative;">
-                            <h4 style="display: inline-block;">Applications</h4>
+                            <h4 style="display: inline-block;">Widgets</h4>
                             <i id = "allApps" title="Loading" class="icon-refresh icon-white pull-right" style="display: inline-block;position: absolute;right: 26px;top: 16px;"></i>
                         </div>
 						<ul id="appList" class="nav nav-pills nav-stacked">
